# TAFFO-submodule-fe

./: .gitignore  CMakeLists.txt  Metadata.md  README.md
EPUtils/: AffineForms.cpp  CMakeLists.txt  FixedPoint.cpp  Metadata.cpp
ErrorPropagator/: AffineForms.cpp  AffineForms.h  CMakeLists.txt  EPExpr.cpp  ErrorPropagator.cpp  ErrorPropagator.h  FixedPoint.cpp  FixedPoint.h  FunctionCopyMap.cpp  FunctionCopyMap.h  FunctionErrorPropagator.cpp  FunctionErrorPropagator.h  IntervalVisitor.cpp  Lipschitz.cpp  MemSSAUtils.cpp  MemSSAUtils.h  Propagators.cpp  Propagators.h  PropagatorsUtils.cpp  RangeErrorMap.cpp  RangeErrorMap.h  SpecialFunctions.cpp  StructErrorMap.cpp  StructErrorMap.h
ErrorPropagator/EPUtils/: AffineForms.cpp  CMakeLists.txt  FixedPoint.cpp  InputInfo.cpp  Metadata.cpp
ErrorPropagator/MDUtils/: CMakeLists.txt  InputInfo.cpp  Metadata.cpp
FeedbackEstimator/: taffo-fe.py
PerformanceEstimator/: CMakeLists.txt  classification.py  pe_utils.py  preprocess.py  profile_loader.py  regression.py  stats_loader.py  taffo-pe.py  test_classification.py  test_regression.py
include/EPUtils/: FixedPoint.h  Metadata.h
include/ErrorPropagator/: AffineForms.h  EPExpr.h  ErrorPropagator.h  FixedPoint.h  FunctionCopyMap.h  FunctionErrorPropagator.h  IntervalVisitor.h  Lipschitz.h  Propagators.h  RangeErrorMap.h
include/ErrorPropagator/EPUtils/: FixedPoint.h  InputInfo.h  Metadata.h
include/ErrorPropagator/MDUtils/: InputInfo.h  Metadata.h
include/llvm/Transforms/ErrorPropagator/: FixedPoint.h  Metadata.h
test/: CMakeLists.txt
test/ErrorPropagator/: 2Matrix.ll  Call.ll  CheckCmp.ll  Conv.ll  ConvShift.ll  FloatingPoint.ll  Globals.ll  IfPhi.ll  IfSelect.ll  Invoke.ll  LoopAdd.ll  LoopAddDefaultCount.ll  NoMemToReg.ll  Overflow.ll  Struct.ll  TwoRec.ll  lit.site.cfg.py.in
test/Regression/: 2Matrix.ll  Call.ll  IfPhi.ll  IfSelect.ll  Invoke.ll  LoopAdd.ll  LoopAddDefaultCount.ll  Struct.ll  StructPtr.ll  TwoRec.ll
test/axbench/: chkval_all.sh  chkval_all_better.py  collect_all.sh
test/axbench/blackscholes/: Makefile  run2.sh
test/axbench/blackscholes/scripts/: qos.py
test/axbench/blackscholes/src/: blackscholes.c
test/axbench/common/src/: benchmark.hpp
test/axbench/fft/: Makefile  run.sh  run2.sh
test/axbench/fft/scripts/: qos.py
test/axbench/fft/src/: complex.cpp  complex.hpp  fft.cpp  fourier.cpp
test/axbench/inversek2j/: Makefile  compile+collect.sh  run2.sh
test/axbench/inversek2j/scripts/: qos.py
test/axbench/inversek2j/src/: inversek2j.cpp  kinematics.cpp
test/axbench/jmeint/: Makefile  run2.sh
test/axbench/jmeint/scripts/: qos.py
test/axbench/jmeint/src/: jmeint.cpp  tritri.cpp
test/axbench/jpeg/: Makefile
test/axbench/jpeg/src/: rgbimage.c
test/axbench/kmeans/: Makefile  run.sh  run2.sh
test/axbench/kmeans/src/: distance.c  kmeans.c  rgbimage.c  rgbimage.h  segmentation.c  segmentation.h
test/axbench/sobel/: Makefile  compile+collect.sh  run.sh
test/axbench/sobel/src/: convolution.cpp  rgb_image.cpp  rgb_image.hpp  sobel.cpp
test/polybench-c-4.2.1-beta/: common_compile.sh  magiclang.sh
test/polybench-c-4.2.1-beta/datamining/correlation/: correlation.c  correlation.h
test/polybench-c-4.2.1-beta/datamining/covariance/: covariance.c  covariance.h
test/polybench-c-4.2.1-beta/linear-algebra/blas/gemm/: gemm.c  gemm.h
test/polybench-c-4.2.1-beta/linear-algebra/blas/gemver/: gemver.c  gemver.h
test/polybench-c-4.2.1-beta/linear-algebra/blas/gesummv/: gesummv.c  gesummv.h
test/polybench-c-4.2.1-beta/linear-algebra/blas/symm/: symm.c  symm.h
test/polybench-c-4.2.1-beta/linear-algebra/blas/syr2k/: syr2k.c  syr2k.h
test/polybench-c-4.2.1-beta/linear-algebra/blas/syrk/: syrk.c  syrk.h
test/polybench-c-4.2.1-beta/linear-algebra/blas/trmm/: trmm.c  trmm.h
test/polybench-c-4.2.1-beta/linear-algebra/kernels/2mm/: 2mm.c  2mm.h
test/polybench-c-4.2.1-beta/linear-algebra/kernels/3mm/: 3mm.c  3mm.h
test/polybench-c-4.2.1-beta/linear-algebra/kernels/atax/: atax.c  atax.h
test/polybench-c-4.2.1-beta/linear-algebra/kernels/bicg/: bicg.c  bicg.h
test/polybench-c-4.2.1-beta/linear-algebra/kernels/doitgen/: doitgen.c  doitgen.h
test/polybench-c-4.2.1-beta/linear-algebra/kernels/mvt/: mvt.c  mvt.h
test/polybench-c-4.2.1-beta/linear-algebra/solvers/cholesky/: cholesky.c  cholesky.h
test/polybench-c-4.2.1-beta/linear-algebra/solvers/durbin/: durbin.c  durbin.h
test/polybench-c-4.2.1-beta/linear-algebra/solvers/gramschmidt/: gramschmidt.c  gramschmidt.h
test/polybench-c-4.2.1-beta/medley/deriche/: deriche.c  deriche.h
test/polybench-c-4.2.1-beta/medley/floyd-warshall/: floyd-warshall.c  floyd-warshall.h
test/polybench-c-4.2.1-beta/medley/nussinov/: nussinov.c  nussinov.h
test/polybench-c-4.2.1-beta/stencils/adi/: adi.c  adi.h
test/polybench-c-4.2.1-beta/stencils/fdtd-2d/: fdtd-2d.c  fdtd-2d.h
test/polybench-c-4.2.1-beta/stencils/heat-3d/: heat-3d.c  heat-3d.h
test/polybench-c-4.2.1-beta/stencils/jacobi-1d/: jacobi-1d.c  jacobi-1d.h
test/polybench-c-4.2.1-beta/stencils/jacobi-2d/: jacobi-2d.c  jacobi-2d.h
test/polybench-c-4.2.1-beta/stencils/seidel-2d/: seidel-2d.c  seidel-2d.h
(+6 files in other folders)
